--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>14 dev tools tricks</title>
   </head>
   <body>
+    <p onclick="makeGreen()">xBREAKxDOWN</p>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
